2007-07-09  Ville Vainio  <vivainio@gmail.com>

	* completer.py: Applied Matthew Neeley's patch:
        Dynamic attributes from trait_names and _getAttributeNames are added
        to the list of tab completions, but when this happens, the attribute
        list is turned into a set, so the attributes are unordered when
        printed, which makes it hard to find the right completion. This patch
        turns this set back into a list and sort it.

2007-07-06  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/OInspect.py (Inspector.pinfo): Add support for new-style
	classes in various inspector functions.

2007-06-28  Ville Vainio  <vivainio@gmail.com>

	* shadowns.py, iplib.py, ipapi.py, OInspect.py:
        Implement "shadow" namespace, and callable aliases that reside there.
        Use them by:
        
        _ip.defalias('foo',myfunc) # creates _sh.foo that points to myfunc
        
        foo hello world
         (gets translated to:)
        _sh.foo(r"""hello world""")

        In practice, this kind of alias can take the role of a magic function        

        * New generic inspect_object, called on obj? and obj??

2007-06-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ultraTB.py (findsource): fix a problem with
	inspect.getfile that can cause crashes during traceback construction.

2007-06-14  Ville Vainio  <vivainio@gmail.com>

	* iplib.py (handle_auto): Try to use ascii for printing "--->"
        autocall rewrite indication, becausesometimes unicode fails to print
        properly (and you get ' - - - '). Use plain uncoloured ---> for
        unicode.
        
        * shadow history. Usable through "%hist -g <pat>" and "%rep 0123".
        
        . pickleshare 'hash' commands (hget, hset, hcompress,
        hdict) for efficient shadow history storage.

2007-06-13  Ville Vainio  <vivainio@gmail.com>

	* ipapi.py: _ip.to_user_ns(vars, interactive = True).